pubs: FellWalker is a form of watershed algorithm
It turns out that very similar algorithms have been implemented for
segmenting regions within n-body simulations. These are usually some for
of "watershed" algorithm. The ref wants this mentioned.

--- a/pubs/fellwalker/fellwalker.bib
+++ b/pubs/fellwalker/fellwalker.bib
@@ -270,3 +270,24 @@ booktitle = {Astronomical Data Analysis Software and Systems XIX},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{2001Roerdink,
+  author =       {{Roerdink}, J.~B.~T.~M. and {Meijster}, A.},
+  title =        "{The Watershed Transform: Definitions, Algorithms and Parallelization Strategies}",
+  journal =      {Fundamenta\ Informaticae},
+  year =         2001,
+  volume =       41,
+  pages =        {187-228}
+}
+
+@ARTICLE{1998Eisenstein,
+  author =       {Eisenstein, D.~J.  and Hut, P.},
+  title =        "{HOP: A New Group-Finding Algorithm for N-Body Simulations}",
+  journal =      {\apj},
+  year =         1998,
+  volume =       498,
+  pages =        {137-142},
+  doi =          {10.1086/305535},
+  adsurl =       {http://adsabs.harvard.edu/abs/1998ApJ...498..137E},
+  adsnote =      {Provided by the SAO/NASA Astrophysics Data System}
+}
+
