mers: Correct priority level in description item.

--- a/libraries/mers/sun104.tex
+++ b/libraries/mers/sun104.tex
@@ -837,7 +837,7 @@ set to either \msgnorm, \msgverb, \msgdebug\ (and related constants) or
 \msgall;
 \item [\msgverb] -- output the given message only if the current output
 filter is set to \msgverb, \msgdebug\ (and related constants) or \msgall.
-\item [\msgverb] -- output the given message only if the current output
+\item [\msgdebug] -- output the given message only if the current output
 filter is set to \msgdebug\ (and related constants) or \msgall.
 
 \end {description}
