pubs: Fellwalker - we do not compare FellWalker with other types of algorithms
The referee wanted some discussion of other algorithms.

--- a/pubs/fellwalker/fellwalker.bib
+++ b/pubs/fellwalker/fellwalker.bib
@@ -291,3 +291,34 @@ booktitle = {Astronomical Data Analysis Software and Systems XIX},
   adsnote =      {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{2008Rosolowsky,
+  author =       {{Rosolowsky}, E.~W. and {Pineda}, J.~E. and {Kauffmann}, J. and {Goodman}, A.~A.},
+  title =        "{Structural analysis of molecular clouds: Dendrograms}",
+  journal =      {\apj},
+  year =         2008,
+  volume =       679,
+  pages =        {1338},
+  archivePrefix = "arXiv",
+  eprint = {0802.2944},
+  doi =          {10.1086/587685},
+  adsurl =       {http://adsabs.harvard.edu/abs/2008ApJ...679.1338R},
+  adsnote =      {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{GetSources,
+  author =       {{Men'shchikov}, A. and {André},Ph. and {Didelon}, P. and
+                  {Motte}, F. and {Hennemann}, M. and {Schneider}, N.}
+  title =        "{A multi-scale, multi-wavelength source extraction method: getsources}",
+  journal =      {\aap},
+  year =         2012,
+  volume =       542,
+  pages =        {A81},
+  archivePrefix = "arXiv",
+  eprint =       {1204.4508},
+  doi =          {10.1051/0004-6361/201218797},
+  adsurl =       {http://adsabs.harvard.edu/abs/2012A%26A...542A..81M},
+  adsnote =      {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
