pubs: FellWalker - referee wants "STC-S" explained.

--- a/pubs/fellwalker/fellwalker.tex
+++ b/pubs/fellwalker/fellwalker.tex
@@ -528,7 +528,13 @@ pixel values within the clump).
 \item[Peak] The peak value in the clump.
 \item[Volume] The total number of pixels falling within the clump.
 \item[Shape] An optional column containing an STC-S description
-\citep{2007STCS,2007STC,2010ASPC..434..213B} of the spatial coverage of the clump.
+\citep{2007STCS,2007STC,2010ASPC..434..213B} of the spatial coverage
+of the clump. STC-S is standard developed by the International Virtual
+Observatory Alliance\footnote{http://www.ivoa.net} to describe Space-Time
+Coordinate (STC) metadata in the form of a simple linear string of
+characters. In the case of CUPID, this metadata describes either a
+polygonal or elliptical region within the spatial World Coordinate
+System (WCS) of the supplied input data.
 \end{description}
 
 \end{enumerate}
