pub: FellWalker - differentiate more clear between different sets of test data
The referee says "Although in Sect. 3.1, the text says that all the
Gaussian sources have equal amplitude, that does not appear to be so,
by eye. Is that because of an improbable number of overlaps, does my
eye deceive me, or is the text wrong? Fig. 11, on the other hand,
does seem to have a set of equal, superimposed Gaussians."

In fact he was mis-interpreting the scope of the statement about
constant peak values.

--- a/pubs/fellwalker/fellwalker.tex
+++ b/pubs/fellwalker/fellwalker.tex
@@ -652,10 +652,12 @@ different clump-finding parameter values.
 \subsection{The Artificial Data}
 The input data for each test was a two-dimensional image of $500\times500$
 pixels containing 200 randomly positioned Gaussian clumps, all with the
-same peak value of 100 (arbitrary units) and the same FWHM of 15 pixels.
-Gaussian noise was then added, with a different noise level for each of
-eight successive set of tests. The eight noise levels used were
-spread evenly between 2 and 16.
+same peak value of 100 (arbitrary units) and the same FWHM of 15 pixels
+\footnote{Note, this test data is \emph{not} that shown in figures
+\ref{fig:comp1} and \ref{fig:comp2} in which the clumps have \emph{different}
+peak values.}. Gaussian noise was then added, with a different noise
+level for each of eight successive set of tests. The eight noise levels
+used were spread evenly between 2 and 16.
 
 \subsection{The Clump-finding Parameters}
 For each of the eight different noise levels, the data was analysed
