pubs: fix missing comma in fellwalker bib file

--- a/pubs/fellwalker/fellwalker.bib
+++ b/pubs/fellwalker/fellwalker.bib
@@ -307,7 +307,7 @@ booktitle = {Astronomical Data Analysis Software and Systems XIX},
 
 @ARTICLE{GetSources,
   author =       {{Men'shchikov}, A. and {André},Ph. and {Didelon}, P. and
-                  {Motte}, F. and {Hennemann}, M. and {Schneider}, N.}
+                  {Motte}, F. and {Hennemann}, M. and {Schneider}, N.},
   title =        "{A multi-scale, multi-wavelength source extraction method: getsources}",
   journal =      {\aap},
   year =         2012,
