ndf: Fix the logic in ndf_hcopy
The output NDF should be left unchnaged if the input NDF has no history
component. This means that any pre-existing history component created by
ndfHcre within the output NDF is left intact if the input NDF has no
history component, enabling default History to be added to the output
NDF when the application closes.

--- a/libraries/ndf/sun33.tex
+++ b/libraries/ndf/sun33.tex
@@ -14071,8 +14071,17 @@ locator}{sun92}{using_locators}}
       }
    }
    \sstnotes{
-      This routine returns without action leaving the destination NDF
-      unchanged if no History component exists in the destination NDF.
+      \sstitemlist{
+
+         \sstitem
+         This routine returns without action leaving the destination NDF
+         unchanged if no History component exists in the input NDF.
+
+         \sstitem
+         If the input NDF contains a History component, then a History
+         component is added to the destination NDF automatically, if one
+         does not already exist.
+      }
    }
 }
 \sstroutine{
